# pyseek

./: .gitignore  pyproject.toml
pyseek/: __init__.py  __main__.py  _read.py  config.py  edgar.py  errors.py  models.py  setup.py  submissions.py  utils.py
tests/: conftest.py  test_cli.py  test_config.py  test_edgar.py  test_utils.py
