[tool.poetry]
name = "pyseek"
version = "0.1.0"
description = ""
authors = ["Zach Lopez <zachlopez9@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
pyseek = "pyseek.__main__:app"

[tool.poetry.dependencies]
python = "^3.9"
typer = {extras = ["all"], version = "^0.7.0"}
requests = "^2.28.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
